<resources>
    <string name="app_name">My Application</string>

    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="menu_coffe">Menu Coffe</string>
    <string name="sajian">Sajian</string>
    <string name="hangat">Hangat</string>
    <string name="dingin">Dingin</string>
    <string name="bayar">bayar</string>
    <string name="pesan">Pesan</string>
    <string name="bahasa">Bahasa</string>

    <string name="pesanan">Pesanan</string>
    <string name="jumlah">Jumlah</string>
    <string name="kembalian">Kembalian</string>
    <string name="hubungi">Hubungi</string>

    <string name="satu">Satu</string>
    <string name="dua">Dua/Tiga</string>
    <string name="tiga">Tiga</string>


    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
