<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity4_2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/Act4_2LLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/Act4_2TView1Judul"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_pemesan"/>
            <TextView
                android:id="@+id/Act4_2TView1"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Act4_2LLayout2"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Act4_2LLayout1">
            <TextView
                android:id="@+id/Act4_2LLayoutTview1Judul"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pesanan"/>
            <LinearLayout
                android:id="@+id/Act4_2LLayout2_2"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Act4_2LLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Act4_2LLayout2">
            <TextView
                android:id="@+id/Act4_2TView5Judul"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total"/>
            <TextView
                android:id="@+id/Act4_2TView5"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Act4_2LLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Act4_2LLayout5">
            <TextView
                android:id="@+id/Act4_2TView6Judul"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bayar"/>
            <TextView
                android:id="@+id/Act4_2TView6"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bayar"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Act4_2LLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Act4_2LLayout6">
            <TextView
                android:id="@+id/Act4_2TView7Judul"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kembalian"/>
            <TextView
                android:id="@+id/Act4_2TView7"
                android:layout_margin="10dp"
                android:textSize="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kembalian"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>